# overstep

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  ABOUT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  action.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/ci/: github-actions.yml  gitlab-ci.yml
examples/crapi/: README.md  matrix.yaml
examples/injections/: matrix.yaml
examples/mcp_api/: matrix.yaml  matrix_setup.yaml  matrix_stdio.yaml  server.py  stdio_server.py
examples/mock_api/: matrix.yaml  openapi.yaml  server.py  waivers.yaml
src/overstep/: __init__.py  __main__.py  auth.py  classifier.py  cli.py  drift.py  executor.py  expressions.py  fixtures.py  interpolation.py  jsonpath.py  matching.py  matrix.py  mcp_auth.py  mcp_client.py  mcp_matching.py  models.py  pipeline.py  planner.py  repro.py  taxonomy.py  templating.py  waivers.py
src/overstep/loaders/: __init__.py  har.py  mcp.py  (+1 more)
tests/: conftest.py  test_auth.py  test_bopla_crossmethod.py  test_classifier.py  test_cli.py  test_distribution.py  test_drift.py  test_executor_resilience.py  test_expressions.py  test_fixtures.py  test_headers.py  test_interpolation.py  test_matching.py  test_matrix_and_loaders.py  test_mcp_auth.py  test_mcp_fixtures.py  test_mcp_scaffold.py  test_mcp_stdio.py  test_mcp_transport.py  test_openapi_policy.py  test_oracle.py  test_ownership.py  test_pipeline.py  test_planner.py  test_repro.py  test_taxonomy.py  test_transports.py  test_waivers.py
(+10 files in other folders)
