[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overstep"
version = "0.17.0"
description = "Matrix-driven authorization testing for HTTP APIs (BOLA/BFLA/privilege escalation/auth drift)."
authors = [{name = "Ahmad Kabiri"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["security", "authorization", "bola", "bfla", "api-security", "dast", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "fastapi>=0.112", "uvicorn>=0.30"]

[project.urls]
Homepage = "https://github.com/kabiri-labs/overstep"
Issues = "https://github.com/kabiri-labs/overstep/issues"
Changelog = "https://github.com/kabiri-labs/overstep/blob/main/CHANGELOG.md"
Source = "https://github.com/kabiri-labs/overstep"

[project.scripts]
overstep = "overstep.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
overstep = ["py.typed"]
